<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="MNG_APPLICATION_OUTPUTS_32BIT" Id="{74ffad06-2b7f-4bb4-8061-75cb5e67084b}">
    <Declaration><![CDATA[
TYPE MNG_APPLICATION_OUTPUTS_32BIT :
STRUCT
    NumSignals                     : INT     := 222       ;
    Fahrachse1_00_ChainDrvActual : REAL    := 0.0; (* Physics://physics/Fahrachse1?ChainDrvActual *)
    Cocktail_Holder_1_00_ACT_POS : REAL    := 0.0; (* /physics1/Mover_Adapter/Cocktail_Holder_1?KinActual *)
    Cocktail_Holder1_00_Priority : UDINT   := 0; (* Adapter/Cocktail_Holder_1/Cocktail_Holder1?Priority *)
    Cocktail_Holder1_00_GRIP : BOOL    := 0; (* _Adapter/Cocktail_Holder_1/Cocktail_Holder1?Gripper *)
    Fahrachse2_00_ChainDrvActual : REAL    := 0.0; (* Physics://physics/Fahrachse2?ChainDrvActual *)
    Cocktail_Holder_2_00_ACT_POS : REAL    := 0.0; (* /physics2/Mover_Adapter/Cocktail_Holder_2?KinActual *)
    Cocktail_Holder2_00_Priority : UDINT   := 0; (* Adapter/Cocktail_Holder_2/Cocktail_Holder2?Priority *)
    Cocktail_Holder2_00_GRIP : BOOL    := 0; (* _Adapter/Cocktail_Holder_2/Cocktail_Holder2?Gripper *)
    Fahrachse3_00_ChainDrvActual : REAL    := 0.0; (* Physics://physics/Fahrachse3?ChainDrvActual *)
    Cocktail_Holder_3_00_ACT_POS : REAL    := 0.0; (* /physics3/Mover_Adapter/Cocktail_Holder_3?KinActual *)
    Cocktail_Holder3_00_Priority : UDINT   := 0; (* Adapter/Cocktail_Holder_3/Cocktail_Holder3?Priority *)
    Cocktail_Holder3_00_GRIP : BOOL    := 0; (* _Adapter/Cocktail_Holder_3/Cocktail_Holder3?Gripper *)
    Fahrachse4_00_ChainDrvActual : REAL    := 0.0; (* Physics://physics/Fahrachse4?ChainDrvActual *)
    Cocktail_Holder_4_00_ACT_POS : REAL    := 0.0; (* /physics4/Mover_Adapter/Cocktail_Holder_4?KinActual *)
    Cocktail_Holder4_00_Priority : UDINT   := 0; (* Adapter/Cocktail_Holder_4/Cocktail_Holder4?Priority *)
    Cocktail_Holder4_00_GRIP : BOOL    := 0; (* _Adapter/Cocktail_Holder_4/Cocktail_Holder4?Gripper *)
    Fahrachse5_00_ChainDrvActual : REAL    := 0.0; (* Physics://physics/Fahrachse5?ChainDrvActual *)
    Cocktail_Holder_5_00_ACT_POS : REAL    := 0.0; (* /physics5/Mover_Adapter/Cocktail_Holder_5?KinActual *)
    Cocktail_Holder5_00_Priority : UDINT   := 0; (* Adapter/Cocktail_Holder_5/Cocktail_Holder5?Priority *)
    Cocktail_Holder5_00_GRIP : BOOL    := 0; (* _Adapter/Cocktail_Holder_5/Cocktail_Holder5?Gripper *)
    Fahrachse6_00_ChainDrvActual : REAL    := 0.0; (* Physics://physics/Fahrachse6?ChainDrvActual *)
    Cocktail_Holder_6_00_ACT_POS : REAL    := 0.0; (* /physics6/Mover_Adapter/Cocktail_Holder_6?KinActual *)
    Cocktail_Holder6_00_Priority : UDINT   := 0; (* Adapter/Cocktail_Holder_6/Cocktail_Holder6?Priority *)
    Cocktail_Holder6_00_GRIP : BOOL    := 0; (* _Adapter/Cocktail_Holder_6/Cocktail_Holder6?Gripper *)
    LED_2_65_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.65?on1 *)
    LED_2_65_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.65?on2 *)
    LED_2_65_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.65?on3 *)
    LED_2_60_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.60?on1 *)
    LED_2_60_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.60?on2 *)
    LED_2_60_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.60?on3 *)
    LED_3_05_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.05?on1 *)
    LED_3_05_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.05?on2 *)
    LED_3_05_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.05?on3 *)
    LED_2_50_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.50?on1 *)
    LED_2_50_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.50?on2 *)
    LED_2_50_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.50?on3 *)
    LED_2_55_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.55?on1 *)
    LED_2_55_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.55?on2 *)
    LED_2_55_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.55?on3 *)
    LED_3_00_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.00?on1 *)
    LED_3_00_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.00?on2 *)
    LED_3_00_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.00?on3 *)
    LED_2_95_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.95?on1 *)
    LED_2_95_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.95?on2 *)
    LED_2_95_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.95?on3 *)
    LED_2_90_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.90?on1 *)
    LED_2_90_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.90?on2 *)
    LED_2_90_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.90?on3 *)
    LED_2_85_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.85?on1 *)
    LED_2_85_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.85?on2 *)
    LED_2_85_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.85?on3 *)
    LED_2_80_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.80?on1 *)
    LED_2_80_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.80?on2 *)
    LED_2_80_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.80?on3 *)
    LED_2_75_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.75?on1 *)
    LED_2_75_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.75?on2 *)
    LED_2_75_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.75?on3 *)
    LED_2_70_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.70?on1 *)
    LED_2_70_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.70?on2 *)
    LED_2_70_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.70?on3 *)
    LED_3_10_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.10?on1 *)
    LED_3_10_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.10?on2 *)
    LED_3_10_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.10?on3 *)
    LED_3_15_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.15?on1 *)
    LED_3_15_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.15?on2 *)
    LED_3_15_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.15?on3 *)
    LED_3_20_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.20?on1 *)
    LED_3_20_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.20?on2 *)
    LED_3_20_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.20?on3 *)
    LED_3_25_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.25?on1 *)
    LED_3_25_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.25?on2 *)
    LED_3_25_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.25?on3 *)
    LED_3_45_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.45?on1 *)
    LED_3_45_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.45?on2 *)
    LED_3_45_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.45?on3 *)
    LED_3_40_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.40?on1 *)
    LED_3_40_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.40?on2 *)
    LED_3_40_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.40?on3 *)
    LED_2_25_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.25?on1 *)
    LED_2_25_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.25?on2 *)
    LED_2_25_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.25?on3 *)
    LED_2_20_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.20?on1 *)
    LED_2_20_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.20?on2 *)
    LED_2_20_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.20?on3 *)
    LED_2_15_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.15?on1 *)
    LED_2_15_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.15?on2 *)
    LED_2_15_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.15?on3 *)
    LED_2_10_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.10?on1 *)
    LED_2_10_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.10?on2 *)
    LED_2_10_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.10?on3 *)
    LED_2_05_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.05?on1 *)
    LED_2_05_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.05?on2 *)
    LED_2_05_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.05?on3 *)
    LED_2_00_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.00?on1 *)
    LED_2_00_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.00?on2 *)
    LED_2_00_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.00?on3 *)
    LED_3_35_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.35?on1 *)
    LED_3_35_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.35?on2 *)
    LED_3_35_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.35?on3 *)
    LED_3_30_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.30?on1 *)
    LED_3_30_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.30?on2 *)
    LED_3_30_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_3.30?on3 *)
    LED_2_35_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.35?on1 *)
    LED_2_35_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.35?on2 *)
    LED_2_35_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.35?on3 *)
    LED_2_30_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.30?on1 *)
    LED_2_30_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.30?on2 *)
    LED_2_30_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.30?on3 *)
    LED_2_40_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.40?on1 *)
    LED_2_40_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.40?on2 *)
    LED_2_40_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.40?on3 *)
    LED_2_45_00_on1 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.45?on1 *)
    LED_2_45_00_on2 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.45?on2 *)
    LED_2_45_00_on3 : BOOL    := 0; (* Physics://physics/LED2-3.5/LED_2.45?on3 *)
    LED_0_80_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.80?on1 *)
    LED_0_80_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.80?on2 *)
    LED_0_80_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.80?on3 *)
    LED_0_85_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.85?on1 *)
    LED_0_85_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.85?on2 *)
    LED_0_85_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.85?on3 *)
    LED_0_40_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.40?on1 *)
    LED_0_40_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.40?on2 *)
    LED_0_40_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.40?on3 *)
    LED_0_95_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.95?on1 *)
    LED_0_95_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.95?on2 *)
    LED_0_95_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.95?on3 *)
    LED_0_90_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.90?on1 *)
    LED_0_90_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.90?on2 *)
    LED_0_90_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.90?on3 *)
    LED_0_45_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.45?on1 *)
    LED_0_45_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.45?on2 *)
    LED_0_45_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.45?on3 *)
    LED_0_50_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.50?on1 *)
    LED_0_50_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.50?on2 *)
    LED_0_50_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.50?on3 *)
    LED_0_55_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.55?on1 *)
    LED_0_55_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.55?on2 *)
    LED_0_55_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.55?on3 *)
    LED_0_60_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.60?on1 *)
    LED_0_60_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.60?on2 *)
    LED_0_60_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.60?on3 *)
    LED_0_65_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.65?on1 *)
    LED_0_65_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.65?on2 *)
    LED_0_65_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.65?on3 *)
    LED_0_70_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.70?on1 *)
    LED_0_70_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.70?on2 *)
    LED_0_70_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.70?on3 *)
    LED_0_75_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.75?on1 *)
    LED_0_75_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.75?on2 *)
    LED_0_75_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.75?on3 *)
    LED_0_35_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.35?on1 *)
    LED_0_35_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.35?on2 *)
    LED_0_35_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.35?on3 *)
    LED_0_30_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.30?on1 *)
    LED_0_30_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.30?on2 *)
    LED_0_30_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.30?on3 *)
    LED_0_25_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.25?on1 *)
    LED_0_25_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.25?on2 *)
    LED_0_25_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.25?on3 *)
    LED_0_20_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.20?on1 *)
    LED_0_20_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.20?on2 *)
    LED_0_20_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.20?on3 *)
    LED_0_00_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.00?on1 *)
    LED_0_00_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.00?on2 *)
    LED_0_00_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.00?on3 *)
    LED_0_05_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.05?on1 *)
    LED_0_05_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.05?on2 *)
    LED_0_05_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.05?on3 *)
    LED_1_20_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.20?on1 *)
    LED_1_20_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.20?on2 *)
    LED_1_20_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.20?on3 *)
    LED_1_25_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.25?on1 *)
    LED_1_25_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.25?on2 *)
    LED_1_25_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.25?on3 *)
    LED_1_30_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.30?on1 *)
    LED_1_30_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.30?on2 *)
    LED_1_30_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.30?on3 *)
    LED_1_35_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.35?on1 *)
    LED_1_35_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.35?on2 *)
    LED_1_35_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.35?on3 *)
    LED_1_40_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.40?on1 *)
    LED_1_40_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.40?on2 *)
    LED_1_40_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.40?on3 *)
    LED_1_45_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.45?on1 *)
    LED_1_45_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.45?on2 *)
    LED_1_45_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.45?on3 *)
    LED_0_10_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.10?on1 *)
    LED_0_10_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.10?on2 *)
    LED_0_10_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.10?on3 *)
    LED_0_15_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.15?on1 *)
    LED_0_15_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.15?on2 *)
    LED_0_15_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_0.15?on3 *)
    LED_1_10_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.10?on1 *)
    LED_1_10_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.10?on2 *)
    LED_1_10_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.10?on3 *)
    LED_1_15_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.15?on1 *)
    LED_1_15_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.15?on2 *)
    LED_1_15_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.15?on3 *)
    LED_1_05_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.05?on1 *)
    LED_1_05_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.05?on2 *)
    LED_1_05_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.05?on3 *)
    LED_1_00_00_on1 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.00?on1 *)
    LED_1_00_00_on2 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.00?on2 *)
    LED_1_00_00_on3 : BOOL    := 0; (* Physics://physics/LED0-1.5/LED_1.00?on3 *)
    Seitenwand_00_reserved_colour02 : BOOL    := 0; (* c/physics2/Mover_Adapter/Seitenwand?reserved_colour *)
    Seitenwand_00_blocked_colour02 : BOOL    := 0; (* ic/physics2/Mover_Adapter/Seitenwand?blocked_colour *)
    Seitenwand_00_error_colour02 : BOOL    := 0; (* blic/physics2/Mover_Adapter/Seitenwand?error_colour *)
    Seitenwand0_00_reserved_colour02 : BOOL    := 0; (* /physics2/Mover_Adapter/Seitenwand0?reserved_colour *)
    Seitenwand0_00_blocked_colour02 : BOOL    := 0; (* c/physics2/Mover_Adapter/Seitenwand0?blocked_colour *)
    Seitenwand0_00_error_colour02 : BOOL    := 0; (* lic/physics2/Mover_Adapter/Seitenwand0?error_colour *)
    Seitenwand_00_reserved_colour04 : BOOL    := 0; (* c/physics4/Mover_Adapter/Seitenwand?reserved_colour *)
    Seitenwand_00_blocked_colour04 : BOOL    := 0; (* ic/physics4/Mover_Adapter/Seitenwand?blocked_colour *)
    Seitenwand_00_error_colour04 : BOOL    := 0; (* blic/physics4/Mover_Adapter/Seitenwand?error_colour *)
    Seitenwand0_00_reserved_colour04 : BOOL    := 0; (* /physics4/Mover_Adapter/Seitenwand0?reserved_colour *)
    Seitenwand0_00_blocked_colour04 : BOOL    := 0; (* c/physics4/Mover_Adapter/Seitenwand0?blocked_colour *)
    Seitenwand0_00_error_colour04 : BOOL    := 0; (* lic/physics4/Mover_Adapter/Seitenwand0?error_colour *)
    Seitenwand_00_reserved_colour06 : BOOL    := 0; (* c/physics6/Mover_Adapter/Seitenwand?reserved_colour *)
    Seitenwand_00_blocked_colour06 : BOOL    := 0; (* ic/physics6/Mover_Adapter/Seitenwand?blocked_colour *)
    Seitenwand_00_error_colour06 : BOOL    := 0; (* blic/physics6/Mover_Adapter/Seitenwand?error_colour *)
    Seitenwand0_00_reserved_colour06 : BOOL    := 0; (* /physics6/Mover_Adapter/Seitenwand0?reserved_colour *)
    Seitenwand0_00_blocked_colour06 : BOOL    := 0; (* c/physics6/Mover_Adapter/Seitenwand0?blocked_colour *)
    Seitenwand0_00_error_colour06 : BOOL    := 0; (* lic/physics6/Mover_Adapter/Seitenwand0?error_colour *)
END_STRUCT
END_TYPE


]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>