<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <GVL Name="GVL" Id="{fba23080-ab95-41af-b8d4-86d8a431a892}">
    <Declaration><![CDATA[VAR_GLOBAL
	ax: ARRAY[1..axcnt] OF AXIS_REF;
	poweredaxes	: ARRAY [1..axcnt] OF BOOL := [TRUE,TRUE,TRUE,TRUE,TRUE,TRUE];
	grp: ARRAY[1..grpcnt] OF AXIS_REF;
	CAgrp: CAGROUP_REF;
	/// OID of PollCallProxy, set via "Symbol Initialization" Tab in Instance of this PLC Project
	{attribute 'TcInitSymbol' := ''}
	callTargetOID : OTCID ;
	
	couplegap	: LREAL := 137;
	zerohightdistance	: LREAL := 132.82;
	CAgap		: LREAL	:= 200;
	
	
	buddyvelo	: LREAL		:= 30;
	freevelo	: LREAL		:= 500.0;
	maxvelo		: LREAL		:= 1500.0;
	defaultvelo	: LREAL		:= 500.0;
	freeacc		: LREAL		:= 8000.0;
	maxacc		: LREAL		:= 8000.0;
	defaulacc	: LREAL		:= 7800.0;
	initvelo	: LREAL		:= 300;
	nocurvesvelo	: LREAL := 350;
	surpressinggap	: LREAL := 200;
	
	restartstate	: INT := 0;
	
	bInput				: BOOL;
	//bSensor				: BOOL := 0; //OPC SENSOR INPUT
	measurementCycles	: INT := 4;
	MeasuredPosition	: ARRAY [1..10]OF LREAL;
	AveragedPosition	: LREAL := 13377.773;
	
	//OPC CLient GVL
	ClientSensorValue		: BOOL;
	ClientExecute			: BOOL;
	ClientReadEstablished	: BOOL;
	ClientDone				: BOOL;
	ClientWrite				: BOOL;
	ClientModuleServerUrl 	: STRING := 'opc.tcp://127.0.0.1:4840'; //'opc.tcp://192.168.175.224:4840';
	ClientReadIdentifier	: STRING := 'MI5.Module1102.Output.PositionSensor';
	ClientWriteIdentifier	: STRING:= 'MI5.Module1102.Input.PositionInput';
	ClientNamespaceIndex	: UINT;
	ClientNamespaceUri		: STRING;
	// Simulation Reserve Visu
	LampInterface			: ARRAY[1..ColourCnt] OF ARRAY [1..LampCnt] OF BOOL;
	
	
	CurveSection	: ARRAY [0..curvesectioncnt] OF LREAL := [1400,		1500, 	1562.5,		1625.0,		1687.5,		1750,		1812.5,		1875,		1937.5,		2000,		2100] ;
	CurveVelo		: ARRAY [0..curvesectioncnt] OF LREAL := [300,		300,	275,		250,		225,		200,		225,		250,		275,		300,		300] ;
	
	
END_VAR

VAR_GLOBAL CONSTANT
	raillength: LREAL := 4000.0;
	axcnt: UINT := 6;
	grpcnt: UINT := 3;
	curvesectioncnt	: UINT := 10;	
	// simu visu lampen:
	LampCnt					: UINT := 80;
	ColourCnt				: UINT := 4;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>